// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useQuery (strictMode={ strictMode: false }) > filtered dependency query 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 1,
      "sub": [],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:query",
      "meta": {
        "liveStoreThunkType": "db.query",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "{"query":"SELECT * FROM 'todos' WHERE \\"id\\" = ?","bindValues":["t1"],"queriedTables":{}}",
      },
      "recomputations": 1,
      "sub": [
        "node-4",
      ],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-3",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy milk","completed":false}]",
      },
      "recomputations": 1,
      "sub": [
        "node-2",
        "node-1",
      ],
      "super": [
        "node-5",
      ],
    },
    {
      "_tag": "ref",
      "id": "node-4",
      "isDestroyed": false,
      "isDirty": false,
      "label": "id-filter",
      "meta": undefined,
      "previousResult": {
        "_tag": "Some",
        "value": ""t1"",
      },
      "refreshes": 0,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-5",
      "invocations": 1,
      "isDestroyed": false,
      "label": "subscribe:SELECT * FROM 'todos' WHERE "id" = ?",
      "sub": [
        "node-3",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: false }) > filtered dependency query 2`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 2,
      "sub": [],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:query",
      "meta": {
        "liveStoreThunkType": "db.query",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "{"query":"SELECT * FROM 'todos' WHERE \\"id\\" = ?","bindValues":["t1"],"queriedTables":{}}",
      },
      "recomputations": 1,
      "sub": [
        "node-4",
      ],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-3",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy soy milk","completed":false}]",
      },
      "recomputations": 2,
      "sub": [
        "node-2",
        "node-1",
      ],
      "super": [
        "node-5",
      ],
    },
    {
      "_tag": "ref",
      "id": "node-4",
      "isDestroyed": false,
      "isDirty": false,
      "label": "id-filter",
      "meta": undefined,
      "previousResult": {
        "_tag": "Some",
        "value": ""t1"",
      },
      "refreshes": 0,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-5",
      "invocations": 2,
      "isDestroyed": false,
      "label": "subscribe:SELECT * FROM 'todos' WHERE "id" = ?",
      "sub": [
        "node-3",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: false }) > filtered dependency query 3`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 2,
      "sub": [],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:query",
      "meta": {
        "liveStoreThunkType": "db.query",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "{"query":"SELECT * FROM 'todos' WHERE \\"id\\" = ?","bindValues":["t2"],"queriedTables":{}}",
      },
      "recomputations": 2,
      "sub": [
        "node-4",
      ],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-3",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t2","text":"buy eggs","completed":false}]",
      },
      "recomputations": 3,
      "sub": [
        "node-2",
        "node-1",
      ],
      "super": [
        "node-5",
      ],
    },
    {
      "_tag": "ref",
      "id": "node-4",
      "isDestroyed": false,
      "isDirty": false,
      "label": "id-filter",
      "meta": undefined,
      "previousResult": {
        "_tag": "Some",
        "value": ""t2"",
      },
      "refreshes": 1,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-5",
      "invocations": 3,
      "isDestroyed": false,
      "label": "subscribe:SELECT * FROM 'todos' WHERE "id" = ?",
      "sub": [
        "node-3",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: false }) > same \`useQuery\` hook invoked with different queries > 1: after first render 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 1,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "libraryTracksView1:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy milk","completed":false}]",
      },
      "recomputations": 1,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-3",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-3",
      "invocations": 1,
      "isDestroyed": false,
      "label": "subscribe:libraryTracksView1",
      "sub": [
        "node-2",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: false }) > same \`useQuery\` hook invoked with different queries > 2: after first commit 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 2,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "libraryTracksView1:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy soy milk","completed":false}]",
      },
      "recomputations": 2,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-3",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-3",
      "invocations": 2,
      "isDestroyed": false,
      "label": "subscribe:libraryTracksView1",
      "sub": [
        "node-2",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: false }) > same \`useQuery\` hook invoked with different queries > 3: after forced rerender 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 2,
      "sub": [],
      "super": [
        "node-4",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-4",
      "isDestroyed": false,
      "isDirty": false,
      "label": "libraryTracksView2:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t2","text":"buy eggs","completed":false}]",
      },
      "recomputations": 2,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-5",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-5",
      "invocations": 1,
      "isDestroyed": false,
      "label": "subscribe:libraryTracksView2",
      "sub": [
        "node-4",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: false }) > simple 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 0,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "select * from todos:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[]",
      },
      "recomputations": 1,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-3",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-3",
      "invocations": 1,
      "isDestroyed": false,
      "label": "subscribe:select * from todos",
      "sub": [
        "node-2",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: false }) > simple 2`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 1,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "select * from todos:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy milk","completed":false}]",
      },
      "recomputations": 2,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-3",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-3",
      "invocations": 2,
      "isDestroyed": false,
      "label": "subscribe:select * from todos",
      "sub": [
        "node-2",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: true }) > filtered dependency query 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 1,
      "sub": [],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:query",
      "meta": {
        "liveStoreThunkType": "db.query",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "{"query":"SELECT * FROM 'todos' WHERE \\"id\\" = ?","bindValues":["t1"],"queriedTables":{}}",
      },
      "recomputations": 1,
      "sub": [
        "node-4",
      ],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-3",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy milk","completed":false}]",
      },
      "recomputations": 1,
      "sub": [
        "node-2",
        "node-1",
      ],
      "super": [
        "node-5",
      ],
    },
    {
      "_tag": "ref",
      "id": "node-4",
      "isDestroyed": false,
      "isDirty": false,
      "label": "id-filter",
      "meta": undefined,
      "previousResult": {
        "_tag": "Some",
        "value": ""t1"",
      },
      "refreshes": 0,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-5",
      "invocations": 1,
      "isDestroyed": false,
      "label": "subscribe:SELECT * FROM 'todos' WHERE "id" = ?",
      "sub": [
        "node-3",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: true }) > filtered dependency query 2`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 2,
      "sub": [],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:query",
      "meta": {
        "liveStoreThunkType": "db.query",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "{"query":"SELECT * FROM 'todos' WHERE \\"id\\" = ?","bindValues":["t1"],"queriedTables":{}}",
      },
      "recomputations": 1,
      "sub": [
        "node-4",
      ],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-3",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy soy milk","completed":false}]",
      },
      "recomputations": 2,
      "sub": [
        "node-2",
        "node-1",
      ],
      "super": [
        "node-5",
      ],
    },
    {
      "_tag": "ref",
      "id": "node-4",
      "isDestroyed": false,
      "isDirty": false,
      "label": "id-filter",
      "meta": undefined,
      "previousResult": {
        "_tag": "Some",
        "value": ""t1"",
      },
      "refreshes": 0,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-5",
      "invocations": 2,
      "isDestroyed": false,
      "label": "subscribe:SELECT * FROM 'todos' WHERE "id" = ?",
      "sub": [
        "node-3",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: true }) > filtered dependency query 3`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 2,
      "sub": [],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:query",
      "meta": {
        "liveStoreThunkType": "db.query",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "{"query":"SELECT * FROM 'todos' WHERE \\"id\\" = ?","bindValues":["t2"],"queriedTables":{}}",
      },
      "recomputations": 2,
      "sub": [
        "node-4",
      ],
      "super": [
        "node-3",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-3",
      "isDestroyed": false,
      "isDirty": false,
      "label": "todo:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t2","text":"buy eggs","completed":false}]",
      },
      "recomputations": 3,
      "sub": [
        "node-2",
        "node-1",
      ],
      "super": [
        "node-5",
      ],
    },
    {
      "_tag": "ref",
      "id": "node-4",
      "isDestroyed": false,
      "isDirty": false,
      "label": "id-filter",
      "meta": undefined,
      "previousResult": {
        "_tag": "Some",
        "value": ""t2"",
      },
      "refreshes": 1,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-5",
      "invocations": 3,
      "isDestroyed": false,
      "label": "subscribe:SELECT * FROM 'todos' WHERE "id" = ?",
      "sub": [
        "node-3",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: true }) > same \`useQuery\` hook invoked with different queries > 1: after first render 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 1,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "libraryTracksView1:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy milk","completed":false}]",
      },
      "recomputations": 1,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-3",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-3",
      "invocations": 1,
      "isDestroyed": false,
      "label": "subscribe:libraryTracksView1",
      "sub": [
        "node-2",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: true }) > same \`useQuery\` hook invoked with different queries > 2: after first commit 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 2,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "libraryTracksView1:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy soy milk","completed":false}]",
      },
      "recomputations": 2,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-3",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-3",
      "invocations": 2,
      "isDestroyed": false,
      "label": "subscribe:libraryTracksView1",
      "sub": [
        "node-2",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: true }) > same \`useQuery\` hook invoked with different queries > 3: after forced rerender 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 2,
      "sub": [],
      "super": [
        "node-4",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-4",
      "isDestroyed": false,
      "isDirty": false,
      "label": "libraryTracksView2:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t2","text":"buy eggs","completed":false}]",
      },
      "recomputations": 2,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-5",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-5",
      "invocations": 1,
      "isDestroyed": false,
      "label": "subscribe:libraryTracksView2",
      "sub": [
        "node-4",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: true }) > simple 1`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 0,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "select * from todos:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[]",
      },
      "recomputations": 1,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-3",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-3",
      "invocations": 1,
      "isDestroyed": false,
      "label": "subscribe:select * from todos",
      "sub": [
        "node-2",
      ],
    },
  ],
}
`;

exports[`useQuery (strictMode={ strictMode: true }) > simple 2`] = `
{
  "atoms": [
    {
      "_tag": "ref",
      "id": "node-1",
      "isDestroyed": false,
      "isDirty": false,
      "label": "tableRef:todos",
      "meta": {
        "liveStoreRefType": "table",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "null",
      },
      "refreshes": 1,
      "sub": [],
      "super": [
        "node-2",
      ],
    },
    {
      "_tag": "thunk",
      "id": "node-2",
      "isDestroyed": false,
      "isDirty": false,
      "label": "select * from todos:results",
      "meta": {
        "liveStoreThunkType": "db.result",
      },
      "previousResult": {
        "_tag": "Some",
        "value": "[{"id":"t1","text":"buy milk","completed":false}]",
      },
      "recomputations": 2,
      "sub": [
        "node-1",
      ],
      "super": [
        "node-3",
      ],
    },
  ],
  "deferredEffects": [],
  "effects": [
    {
      "_tag": "effect",
      "id": "node-3",
      "invocations": 2,
      "isDestroyed": false,
      "label": "subscribe:select * from todos",
      "sub": [
        "node-2",
      ],
    },
  ],
}
`;
